feat: add local-k8s env & express project

--- a/environments/local-k8s/namespaces/express/project.env
+++ b/environments/local-k8s/namespaces/express/project.env
@@ -13,3 +13,18 @@ NPM_CONFIG_CACHE=${PROJECT_PATH}/.npm
 DOMAIN=express.kde.maximema.dev
 NAMESPACE=express
 REPO_DIR=example-express
+
+### CICD Pipeline ###
+KDE_PIPELINE_STAGES="build,test,deploy"
+
+KDE_PIPELINE_STAGE_build_IMAGE=node:24
+KDE_PIPELINE_STAGE_build_SCRIPT=build.sh
+
+KDE_PIPELINE_STAGE_test_IMAGE=node:24
+KDE_PIPELINE_STAGE_test_SCRIPT=test.sh
+KDE_PIPELINE_STAGE_test_MANUAL_ONLY=true
+
+KDE_PIPELINE_STAGE_deploy_IMAGE=r82wei/deploy-env:1.1.0
+KDE_PIPELINE_STAGE_deploy_SCRIPT=deploy.sh
+
+### CICD Pipeline ###
